<resources>
    <string name="app_name">Calculator</string>
    <string name="text_view">text view</string>
    <string name="leftBracket">(</string>
    <string name="cancelText">C</string>
    <string name="leftBracketText">^</string>
    <string name="rightBracketText">Mem</string>
    <string name="backspaceText">⌫</string>
    <string name="sevenText">7</string>
    <string name="eightText">8</string>
    <string name="nineText">9</string>
    <string name="divisionText">÷</string>
    <string name="fourText">4</string>
    <string name="fiveText">5</string>
    <string name="sixText">6</string>
    <string name="multiplyText">*</string>
    <string name="oneText">1</string>
    <string name="twoText">2</string>
    <string name="threeText">3</string>
    <string name="subtractText">-</string>
    <string name="zeroText">0</string>
    <string name="decimalText">.</string>
    <string name="equalText">=</string>
    <string name="additionText">+</string>
</resources>
