<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:visibility="visible"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/monitor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/screen"
        android:fontFamily="serif"
        android:gravity="right|center_vertical"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@+id/resultTextView"
        app:layout_constraintEnd_toStartOf="@id/resultTextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/screen"
        android:fontFamily="serif"
        android:gravity="right|center_vertical"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        app:layout_constraintBottom_toTopOf="@id/row_1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/monitor" />

    <LinearLayout
        android:id="@+id/row_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row_2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resultTextView">

        <Button
            android:id="@+id/cancel_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:onClick="cancel"
            android:text="@string/cancelText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold"
            android:background="@drawable/mycancelbutton"/>

        <Button
            android:id="@+id/bracket_Left"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="leftBracket"
            android:text="@string/leftBracketText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/bracket_Right"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="memory"
            android:text="@string/rightBracketText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/backspace_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="backspace"
            android:text="@string/backspaceText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row_3"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_1">

        <Button
            android:id="@+id/seven_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="seven"
            android:text="@string/sevenText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/eight_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="eight"
            android:text="@string/eightText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/nine_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="nine"
            android:text="@string/nineText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/division_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="divide"
            android:text="@string/divisionText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row_4"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_2">

        <Button
            android:id="@+id/four_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="four"
            android:text="@string/fourText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/five_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="five"
            android:text="@string/fiveText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/six_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="six"
            android:text="@string/sixText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/multiply_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="multiply"
            android:text="@string/multiplyText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/row_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_3">

        <Button
            android:id="@+id/one_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="one"
            android:text="@string/oneText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/two_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="two"
            android:text="@string/twoText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/three_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="three"
            android:text="@string/threeText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/subtract_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="subtract"
            android:text="@string/subtractText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row_4">

        <Button
            android:id="@+id/zero_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="Zero"
            android:text="@string/zeroText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/decimal_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/mynumberbutton"
            android:fontFamily="serif"
            android:onClick="decimal"
            android:text="@string/decimalText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/equal_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="result"
            android:text="@string/equalText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/addition_Button"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@drawable/myoprationbutton"
            android:fontFamily="serif"
            android:onClick="add"
            android:text="@string/additionText"
            android:textAlignment="center"
            android:textSize="36sp"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>